Highlight explicitly selected filter tags
This revamps the filtering system to programmatically highlight filters
which have been explicitly selected, i.e. they are not an "All" option.
This also means that the process of adding new filters becomes easier,
as filter types are defined in a single location.

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -84,8 +84,7 @@ body {
 }
 
 /* Tags */
-.category-link, .difficulty-link {
-
+.filter-tag {
     text-decoration: none;
     background-color: #080808;
     color: var(--fg-color);
@@ -99,10 +98,13 @@ body {
     font-size: 0.85em;
 }
 
-.category-link:hover, .difficulty-link:hover {
+.filter-tag:hover {
     background-color: #111111;
 }
 
+.filter-tag[data-selected] {
+    background-color: var(--purple-1);
+}
 
 
 
