Removed references to grading from church of jowett, and fixed bug where pope routes wouldn't show

--- a/challenges/church_of_jowett/container/src/templates/cardinal_revelations.html
+++ b/challenges/church_of_jowett/container/src/templates/cardinal_revelations.html
@@ -24,6 +24,8 @@
 
         .table {
             color: black;
+            table-layout: fixed;
+            width: 100%;
         }
 
     </style>
