--- a/challenges/church_of_jowett/container/src/templates/pope_revelations.html
+++ b/challenges/church_of_jowett/container/src/templates/pope_revelations.html
@@ -24,6 +24,8 @@
 
         .table {
             color: black;
+            table-layout: fixed;
+            width: 100%;
         }
 
     </style>
@@ -43,6 +45,7 @@
                     <td>{{ flag }}</td>
                 </tr>
                 <tr>
+                    <td>Driving</td>
                     <td>Handbrake turns around tighy corners are a great way to impress new collegues and intimidate rivals</td>
                 </tr>
                 <tr>
