--- a/challenges/church_of_jowett/container/src/templates/base.html
+++ b/challenges/church_of_jowett/container/src/templates/base.html
@@ -17,7 +17,7 @@
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
-    <title>View Assignment Marks</title>
+    <title>The Holy church of Jowett</title>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -39,7 +39,7 @@
         crossorigin="anonymous"></script>
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <a class="navbar-brand" href="/">Assignment Grades</a>
+    <a class="navbar-brand" href="/">Church of Jowett</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01"
             aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -49,7 +49,7 @@
         <ul class="navbar-nav ml-md-auto d-block d-sm-flex d-md-flex">
             {% if is_pope_role == true %}
             <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('api.pope_win') }}">Revelations for Cardinals</a>
+                <a class="nav-link" href="{{ url_for('api.pope_win') }}">Revelations for the Pope</a>
             </li>
             {% endif %}
             {% if is_cardinal_role == true %}
