--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -45,62 +45,84 @@
         // The current user will be highlighted
         const currentUsername = "{{ user.username }}";
 
-        function updateLeaderboard() {
-
-            // Make a request to the leaderboard API
-            $.getJSON("/get-leaderboard", function (data) {
-
-                // Nuke the old leaderboard
-                let leaderboard = $("#leaderboard");
-                leaderboard.empty();
-
-                // Make header
-                leaderboard.append(`<thead> <tr><th style="width: 50px;">Rank</th> <th>Name</th> <th>Score</th></tr> </thead>`);
-
-
-                // Rebuild the leaderboard
-                let tbody = $("<tbody></tbody>");
-                $.each(data, function (index, user) {
-                    // Check if the user is the current user, and highlight if they are
-                    let highlight = user.username === currentUsername ? 'class="highlight" id="current-user"' : '';
-                    tbody.append(`<tr ${highlight}><td>${index + 1}</td><td id="username-data"><a href="/profile/${user.user_id}">${user.username}</a></td><td>${user.score}</td></tr>`);
-
-                });
-                leaderboard.append(tbody);
-            });
-
-
+        function divmod(a, b) {
+            return [Math.floor(a/b), a % b];
         }
 
-        function updateRecentActivity() {
-            // Make a request to the Recent Solves API
-            $.getJSON("/get-recent-solves", function (data) {
-                let recentTable = $("#recent-table");
-                // Clear the old content
-                recentTable.empty();
+        function time_ago(time) {
+            const delta = new Date() - time;
+            let day, hour, minute, second, remainder;
+            [day, remainder] = divmod(delta, (1000 * 60 * 60 * 24));
+            [hour, remainder] = divmod(remainder, (1000 * 60 * 60));
+            [minute, remainder] = divmod(remainder, (1000 * 60));
+            [second, remainder] = divmod(remainder, (1000));
 
-                // Define the table headers
-                recentTable.append(`<thead><tr><th>Solver</th><th>Challenge</th><th>Time</th></tr></thead>`);
-
-                // Append data to the table body
-                let tbody = $("<tbody></tbody>");
-                $.each(data, function (index, solve) {
-                    // Check if the user is the current user, and highlight if they are
-                    let highlight = solve.solver === currentUsername ? 'class="highlight"' : '';
-                    tbody.append(`<tr ${highlight}><td>${solve.solver}</td><td>${solve.challenge.name}</td><td>${solve.time_ago}</td></tr>`);
-                });
-                recentTable.append(tbody);
-            });
+            if (day > 0) {
+                return `${day} day${day > 1 ? 's' : ''} ${hour} hour${hour > 1 ? 's' : ''} ago`
+            } else if (hour > 0) {
+                return `${hour} hour${hour > 1 ? 's' : ''} ${minute} minute${minute > 1 ? 's' : ''} ago`
+            } else if (minute > 0) {
+                return `${minute} minute${minute > 1 ? 's' : ''} ago`
+            } else if (second > 5) {
+                return `${second} seconds ago`
+            } else {
+                return "Just now"
+            }
         }
 
-        // When page loads, we update leaderboard and recent activity once
-        updateRecentActivity();
-        updateLeaderboard();
+        // Periodically update relative times
+        setInterval(function () {
+            $("time").each(function () {
+                const element = $(this);
+                element.text(time_ago(new Date(element.attr("datetime"))));
+            });
+        }, 2500);
 
-        // We refresh our info every 5 seconds
-        setInterval(updateRecentActivity, 5000);
-        setInterval(updateLeaderboard, 5000);
+        const leaderboardEvents = new EventSource("leaderboard-events");
+        leaderboardEvents.addEventListener("leaderboard", (event) => {
+            const data = JSON.parse(event.data);
 
+            // Nuke the old leaderboard
+            let leaderboard = $("#leaderboard");
+            leaderboard.empty();
+
+            // Make header
+            leaderboard.append(`<thead> <tr><th style="width: 50px;">Rank</th> <th>Name</th> <th>Score</th></tr> </thead>`);
+
+
+            // Rebuild the leaderboard
+            let tbody = $("<tbody></tbody>");
+            $.each(data, function (index, user) {
+                // Check if the user is the current user, and highlight if they are
+                let highlight = user.username === currentUsername ? 'class="highlight" id="current-user"' : '';
+                tbody.append(`<tr ${highlight}><td>${index + 1}</td><td id="username-data"><a href="/profile/${user.user_id}">${user.username}</a></td><td>${user.score}</td></tr>`);
+
+            });
+            leaderboard.append(tbody);
+        });
+
+        leaderboardEvents.addEventListener("recentActivity", (event) => {
+            const data = JSON.parse(event.data);
+
+            let recentTable = $("#recent-table");
+            // Clear the old content
+            recentTable.empty();
+
+            // Define the table headers
+            recentTable.append(`<thead><tr><th>Solver</th><th>Challenge</th><th>Time</th></tr></thead>`);
+
+            // Append data to the table body
+            let tbody = $("<tbody></tbody>");
+            $.each(data, function (index, solve) {
+                // Check if the user is the current user, and highlight if they are
+                let highlight = solve.solver === currentUsername ? 'class="highlight"' : '';
+
+                const relative_time = time_ago(new Date(solve.time));
+
+                tbody.append(`<tr ${highlight}><td>${solve.solver}</td><td>${solve.challenge.name}</td><td><time datetime="${solve.time}">${relative_time}</time></td></tr>`);
+            });
+            recentTable.append(tbody);
+        });
 
         // Set navbar selected
         $(".leaderboard-link").addClass("navbar-selected");
