Changed color of tables and navbar

--- a/challenges/church_of_jowett/container/src/templates/cardinal_revelations.html
+++ b/challenges/church_of_jowett/container/src/templates/cardinal_revelations.html
@@ -33,9 +33,9 @@
     <div class="top">
         <h4 style="margin-bottom:20px">Revelations for Cardinals:</h4>
         <table class="table">
-            <thead class="thead-dark">
+            <thead style="background-color: #a6192e;  color: white;">
                 <tr>
-                    <th scope="col">Revelation</th>
+                    <th scope="col" width="15%">Revelation</th>
                     <th scope="col">Content</th>
                 </tr>
             </thead>
