--- a/challenges/church_of_jowett/container/src/templates/pope_revelations.html
+++ b/challenges/church_of_jowett/container/src/templates/pope_revelations.html
@@ -24,6 +24,7 @@
 
         .table {
             color: black;
+            
             table-layout: fixed;
             width: 100%;
         }
@@ -33,9 +34,9 @@
     <div class="top">
         <h4 style="margin-bottom:20px">Revelations for the Pope:</h4>
         <table class="table">
-            <thead class="thead-dark">
+            <thead style="background-color: #a6192e; color: white;">
                 <tr>
-                    <th scope="col">Revelation</th>
+                    <th scope="col" width="15%">Revelation</th>
                     <th scope="col">Content</th>
                 </tr>
             </thead>
