Changed color of tables and navbar

--- a/challenges/church_of_jowett/container/src/templates/pope_revelations.html
+++ b/challenges/church_of_jowett/container/src/templates/pope_revelations.html
@@ -19,11 +19,11 @@
         .user_info {
             font-size:18px;
             padding-left: 17px;
-            color: black;
+            color: white;
         }
 
         .table {
-            color: black;
+            color: white;
             table-layout: fixed;
             width: 100%;
         }
@@ -31,15 +31,15 @@
     </style>
 
     <div class="top">
-        <h4 style="margin-bottom:20px">Revelations for the Pope:</h4>
+        <h4 style="margin-bottom:20px; color:white">Revelations for the Pope:</h4>
         <table class="table">
-            <thead class="thead-dark">
+            <thead style="background-color: #a6192e; color: white;">
                 <tr>
-                    <th scope="col">Revelation</th>
+                    <th scope="col" width="15%">Revelation</th>
                     <th scope="col">Content</th>
                 </tr>
             </thead>
-            <tbody>
+            <tbody style="background-color: #7a1010;">
                 <tr>
                     <td>Flag</td>
                     <td>{{ flag }}</td>
