--- a/challenges/church_of_jowett/container/src/templates/todo.html
+++ b/challenges/church_of_jowett/container/src/templates/todo.html
@@ -19,34 +19,33 @@
         .user_info {
             font-size:18px;
             padding-left: 17px;
-            color: white;
+            color: black;
         }
 
         .table {
             color: white;
             table-layout: fixed;
-            width: 100%;
+            width: 40%;
+            margin-left: auto;
+            margin-right: auto;
+            background-color: #7a1010;
+            border: 3px solid #a6192e;
         }
 
     </style>
 
     <div class="top">
-        <h4 style="margin-bottom:20px; color:white">Revelations for Cardinals:</h4>
+        <h4 style="margin-bottom:100px; color:white">Official agenda of the holy church of Jowett</h4>
         <table class="table">
-            <thead style="background-color: #a6192e;  color: white;">
+            <tbody>
                 <tr>
-                    <th scope="col" width="15%">Revelation</th>
-                    <th scope="col">Content</th>
-                </tr>
-            </thead>
-            <tbody style="background-color: #7a1010;">
-                <tr>
-                    <td>Flag</td>
-                    <td>{{ flag }}</td>
+                    <td>Change the JWT secret from "jowett_is_the_best"</td>
                 </tr>
                 <tr>
-                    <td>SCSA</td>
-                    <td>SCSA does their job properly, and the comp sci curse is well put together</td>
+                    <td>Convert Michal Morgan to the Holy Church of Jowett</td>
+                </tr>
+                <tr>
+                    <td>Become the official religion of Shenton College</td>
                 </tr>
             </tbody>
         </table>
