--- a/challenges/church_of_jowett/container/src/templates/base.html
+++ b/challenges/church_of_jowett/container/src/templates/base.html
@@ -9,6 +9,7 @@
     html, body {
         margin: 0px;
         padding: 0px;
+        background-color: #751a27;
     }
 
 </style>
@@ -38,7 +39,7 @@
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #a6192e;">
     <a class="navbar-brand" href="/">Church of Jowett</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01"
             aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
@@ -56,6 +57,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{{ url_for('api.cardinal_win') }}">Revelations for Cardinals</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('api.todo') }}">To do list</a>
+                </li>
             {% endif %}
 
             {% if is_auth == true %}
@@ -70,7 +74,8 @@
         </ul>
     </div>
 </nav>
-<article id="container">
+<article id="container" style="background-color: #751a27;">
+    <!-- Om nom nom me love cookies https://jwt.io/ -->
     {% block body %}
         // Content will be here
     {% endblock %}
