--- a/challenges/church_of_jowett/container/src/templates/public.html
+++ b/challenges/church_of_jowett/container/src/templates/public.html
@@ -12,6 +12,7 @@
         .h1 {
             font-size: 60px;
             margin-bottom: 60px;
+            color: white;
         }
 
     </style>
