--- a/challenges/church_of_jowett/container/src/templates/signup.html
+++ b/challenges/church_of_jowett/container/src/templates/signup.html
@@ -19,13 +19,14 @@
         .top {
             top: 0;
             text-align: center;
-            background-color: #DDDDDD;
+            background-color: #7a1010;
             padding-top: 50px;
             padding-bottom: 40px;
         }
 
         .hl {
             font-size: 50px;
+            color: white;
         }
 
         .bottom {
