--- a/challenges/church_of_jowett/container/src/templates/pope_revelations.html
+++ b/challenges/church_of_jowett/container/src/templates/pope_revelations.html
@@ -19,12 +19,11 @@
         .user_info {
             font-size:18px;
             padding-left: 17px;
-            color: black;
+            color: white;
         }
 
         .table {
-            color: black;
-            
+            color: white;
             table-layout: fixed;
             width: 100%;
         }
@@ -32,7 +31,7 @@
     </style>
 
     <div class="top">
-        <h4 style="margin-bottom:20px">Revelations for the Pope:</h4>
+        <h4 style="margin-bottom:20px; color:white">Revelations for the Pope:</h4>
         <table class="table">
             <thead style="background-color: #a6192e; color: white;">
                 <tr>
@@ -40,7 +39,7 @@
                     <th scope="col">Content</th>
                 </tr>
             </thead>
-            <tbody>
+            <tbody style="background-color: #7a1010;">
                 <tr>
                     <td>Flag</td>
                     <td>{{ flag }}</td>
