Added info page, changed font, and fixed typos

--- a/challenges/church_of_jowett/container/src/templates/pope_revelations.html
+++ b/challenges/church_of_jowett/container/src/templates/pope_revelations.html
@@ -46,7 +46,7 @@
                 </tr>
                 <tr>
                     <td>Driving</td>
-                    <td>Handbrake turns around tighy corners are a great way to impress new collegues and intimidate rivals</td>
+                    <td>Handbrake turns around tight corners are a great way to impress new collegues and intimidate rivals</td>
                 </tr>
                 <tr>
                     <td>SCSA</td>
