--- a/challenges/church_of_jowett/container/src/templates/todo.html
+++ b/challenges/church_of_jowett/container/src/templates/todo.html
@@ -42,7 +42,7 @@
                     <td>Change the JWT secret from "jowett_is_the_best"</td>
                 </tr>
                 <tr>
-                    <td>Convert Michal Morgan to the Holy Church of Jowett</td>
+                    <td>Convert Michael Morgan to the Holy Church of Jowett</td>
                 </tr>
                 <tr>
                     <td>Become the official religion of Shenton College</td>
