--- a/challenges/church_of_jowett/container/src/templates/base.html
+++ b/challenges/church_of_jowett/container/src/templates/base.html
@@ -10,6 +10,7 @@
         margin: 0px;
         padding: 0px;
         background-color: #751a27;
+        font-family: 'Comic Sans MS', 'Comic Sans', cursive !important;
     }
 
 </style>
@@ -63,6 +64,9 @@
             {% endif %}
 
             {% if is_auth == true %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('api.info') }}">Profile</a>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{{ url_for('api.logout') }}">Logout</a>
                 </li>
