--- a/challenges/church_of_jowett/container/src/templates/info.html
+++ b/challenges/church_of_jowett/container/src/templates/info.html
@@ -31,6 +31,6 @@
 
     <div class="top">
         <h1 style="margin-bottom:10%; color:white">Hello, {{ name }}.</h4>
-        <h2 style="color: white;">Your email is: {{ email }}<br>Your rank is: {% if is_pope_role %}The pope!<br>May Jowett bestow wisdom and power upon you.{% elif is_cardinal_role == true %} Graced cardinal of the Holy Church of Jowett. {% else %} Good preist of the Holy Church of Jowett {% endif%} </p>
+        <h2 style="color: white;">Your email is: {{ email }}<br>Your rank is: {% if is_pope_role %}The pope!<br>May Jowett bestow wisdom and power upon you.{% elif is_cardinal_role == true %} Graced cardinal of the Holy Church of Jowett. {% else %} Good priest of the Holy Church of Jowett {% endif%} </p>
 
 {% endblock %}
