Fix leaderboard chart animation
The leaderboard chart no longer "jumps upwards" every 10 seconds.
Closes #8.

--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -165,7 +165,10 @@
 
 
         function updateChart(newData) {
-            leaderboardChart.data.datasets = newData;
+            newData.forEach(function(newDataset, i) {
+                $.extend(leaderboardChart.data.datasets[i], newDataset);
+            });
+
             leaderboardChart.update();
         }
 
