Use Chart.js's native step-before interpolation
We now use a stepped line chart instead of attempting to step the data
ourselves.
(https://www.chartjs.org/docs/3.5.1/samples/line/stepped.html)

--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -152,6 +152,7 @@
                         data: [],
                         borderColor: userColors[item.user], // Use stored color
                         fill: false,
+                        stepped: "before"
                     };
                 }
                 datasets[item.user].data.push({
