Fix leaderboard page title

--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Profile | SaintCTF</title>
+    <title>Leaderboard | SaintCTF</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/nav.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/leaderboard.css') }}">
