Rename all instances of `graph` to `chart`
This is consistent with the terminology of Chart.js.

--- a/static/css/leaderboard.css
+++ b/static/css/leaderboard.css
@@ -54,7 +54,7 @@ tr#current-user td#username-data::after {
 }
 
 
-/* Format graph */
+/* Format chart */
 #leaderboard-page {
     width: 70%;
     margin: 0 auto;
