--- a/templates/challenges.html
+++ b/templates/challenges.html
@@ -1,19 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Challenges | SaintCTF</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/nav.css') }}">
+{% extends "base.html" %}
+{% block title %}Challenges{% endblock %}
 
+{% block head %}
+    {{ super() }}
     <!-- Sweet alert -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@5/dark.css"/>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.js"></script>
     <!-- as lazy as normal alerts, better than you could make them yourself -->
 
-    <!-- Jquery 3.6.0 -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script>
         // OH MY GOD ITS JQUERY RUNNNNNN
         $(document).ready(function () {
@@ -143,137 +137,135 @@
         });
 
     </script>
-</head>
-<body>
-{% include 'navbar.html' %}
+{% endblock %}
 
-<main id="challenge-main">
-    {% set unsolved_count = challenges|length - solved_count %}
+{% block body %}
+    <main id="challenge-main">
+        {% set unsolved_count = challenges|length - solved_count %}
 
-    <section id="flag-section">
-        <h1>Welcome {{ current_user.username }}!</h1>
-        <p>You have {{ current_user.score }} points.</p>
+        <section id="flag-section">
+            <h1>Welcome {{ current_user.username }}!</h1>
+            <p>You have {{ current_user.score }} points.</p>
 
-        <h2>Filter Challenges</h2>
-        <p><span id="visible-count">{{ unsolved_count }}</span> / {{ challenges|length }} challenge(s) visible</p>
+            <h2>Filter Challenges</h2>
+            <p><span id="visible-count">{{ unsolved_count }}</span> / {{ challenges|length }} challenge(s) visible</p>
 
-        <!-- Challenge filtering form -->
-        <form id="filter-form" action="javascript:void(0);">
-            <select name="category">
-                <option value="">All Categories</option>
-                <option value="web">web</option>
-                <option value="crypto">crypto</option>
-                <option value="pwn">pwn</option>
-                <option value="rev">rev</option>
-                <option value="osint">osint</option>
-                <option value="steg">steg</option>
-                <option value="misc">misc</option>
-            </select>
-            <select name="difficulty">
-                <option value="">All Difficulties</option>
-                <option value="free points">free points</option>
-                <option value="easy">easy</option>
-                <option value="medium">medium</option>
-                <option value="hard">hard</option>
-            </select>
-            <div>
-                <input type="checkbox" name="solved" id="solved" />
-                <label for="solved">Show solved challenges ({{ solved_count }})</label>
-            </div>
-        </form>
+            <!-- Challenge filtering form -->
+            <form id="filter-form" action="javascript:void(0);">
+                <select name="category">
+                    <option value="">All Categories</option>
+                    <option value="web">web</option>
+                    <option value="crypto">crypto</option>
+                    <option value="pwn">pwn</option>
+                    <option value="rev">rev</option>
+                    <option value="osint">osint</option>
+                    <option value="steg">steg</option>
+                    <option value="misc">misc</option>
+                </select>
+                <select name="difficulty">
+                    <option value="">All Difficulties</option>
+                    <option value="free points">free points</option>
+                    <option value="easy">easy</option>
+                    <option value="medium">medium</option>
+                    <option value="hard">hard</option>
+                </select>
+                <div>
+                    <input type="checkbox" name="solved" id="solved" />
+                    <label for="solved">Show solved challenges ({{ solved_count }})</label>
+                </div>
+            </form>
 
 
-        <h2>Flag Submission</h2>
-        <!-- Flag submission form -->
-        <form action="/submit-flag" id="flag-form" method="post">
-            <label for="flag"></label><input type="text" id="flag" name="flag" placeholder="saint{EXAMPLE_FLAG}">
-            <input type="submit" value="Submit Flag">
+            <h2>Flag Submission</h2>
+            <!-- Flag submission form -->
+            <form action="/submit-flag" id="flag-form" method="post">
+                <label for="flag"></label><input type="text" id="flag" name="flag" placeholder="saint{EXAMPLE_FLAG}">
+                <input type="submit" value="Submit Flag">
 
-            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+                <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
 
-        </form>
+            </form>
 
-    </section>
+        </section>
 
-    <section id="challenge-list">
-        <p>{{ unsolved_count }} challenge(s) left to solve</p>
+        <section id="challenge-list">
+            <p>{{ unsolved_count }} challenge(s) left to solve</p>
 
-        {% for id, challenge in challenges.items() %}
-            <article class="challenge" data-category="{{ challenge.category }}"
-                     data-difficulty="{{ challenge.difficulty }}"
-                     {% if solves[id]|map(attribute='user.username')|select('eq', current_user.username)|list %}
-                         data-solved style="display: none;"
-                     {% endif %}
-                 >
-                <!-- Challenge info -->
-                <header>
-                    <div>
-                        <h2>{{ challenge.name }} </h2>
-                        <p class="author">{{ challenge.author }}</p>
-                    </div>
+            {% for id, challenge in challenges.items() %}
+                <article class="challenge" data-category="{{ challenge.category }}"
+                         data-difficulty="{{ challenge.difficulty }}"
+                         {% if solves[id]|map(attribute='user.username')|select('eq', current_user.username)|list %}
+                             data-solved style="display: none;"
+                         {% endif %}
+                     >
+                    <!-- Challenge info -->
+                    <header>
+                        <div>
+                            <h2>{{ challenge.name }} </h2>
+                            <p class="author">{{ challenge.author }}</p>
+                        </div>
 
-                    <div class="info-block">
-                        <a class="filter-tag" href="javascript:void(0);" data-filter-type="difficulty" title="Filter by difficulty">{{ challenge.difficulty }}</a>
-                        <a class="filter-tag" href="javascript:void(0);" data-filter-type="category" title="Filter by category">{{ challenge.category }}</a>
-                        <p class="points">{{ challenge.points }} points</p>
-                    </div>
-                </header>
-                <p class="description"> {{ challenge.description | safe }} </p>
+                        <div class="info-block">
+                            <a class="filter-tag" href="javascript:void(0);" data-filter-type="difficulty" title="Filter by difficulty">{{ challenge.difficulty }}</a>
+                            <a class="filter-tag" href="javascript:void(0);" data-filter-type="category" title="Filter by category">{{ challenge.category }}</a>
+                            <p class="points">{{ challenge.points }} points</p>
+                        </div>
+                    </header>
+                    <p class="description"> {{ challenge.description | safe }} </p>
 
-                {% if challenge.files %}
-                    <!-- Challenge downloads -->
-                    <div class="files">
-                        <h3>Files</h3>
-                        <ul>
-                            {% for file in challenge.files %}
-                                <li><a href="downloads/{{ id }}/{{ file }}" download="{{ file }}">{{ file }}</a></li>
+                    {% if challenge.files %}
+                        <!-- Challenge downloads -->
+                        <div class="files">
+                            <h3>Files</h3>
+                            <ul>
+                                {% for file in challenge.files %}
+                                    <li><a href="downloads/{{ id }}/{{ file }}" download="{{ file }}">{{ file }}</a></li>
 
-                            {% endfor %}
-                        </ul>
-                    </div>
-                {% endif %}
-
-                {% if challenge.container %}
-                    <!-- Challenge Links-->
-                    <div class = "files">
-                        <h3>Link</h3>
-                        <ul>
-                            <li><a href="{{ challenge.container.url }}">{{ challenge.container.url }}</a></li>
-                        </ul>
-                    </div>
-                {% endif %}
-              
-                <footer>
-                    {% if solves[id] %}
-                        <details class="solves-count">
-                            <summary>{{ solves[id]|length }} solve(s)</summary>
-                            <table>
-                                <thead>
-                                    <tr>
-                                        <th>Username</th>
-                                        <th>Time</th>
-                                    </tr>
-                                </thead>
-                                {% for solve in solves[id] %}
-                                    <tr {% if solve.user.username == current_user.username %}
-                                        class="highlight"
-                                        {% endif %}
-                                        >
-                                        <td>{{solve.user.username}}</td>
-                                        <td>{{solve.time | time_ago}}</td>
-                                    </tr>
                                 {% endfor %}
-                            </table>
-                        </details>
-                    {% else %}
-                        <p class="solves-count">0 solves</p>
+                            </ul>
+                        </div>
                     {% endif %}
-                </footer>
+
+                    {% if challenge.container %}
+                        <!-- Challenge Links-->
+                        <div class = "files">
+                            <h3>Link</h3>
+                            <ul>
+                                <li><a href="{{ challenge.container.url }}">{{ challenge.container.url }}</a></li>
+                            </ul>
+                        </div>
+                    {% endif %}
+                  
+                    <footer>
+                        {% if solves[id] %}
+                            <details class="solves-count">
+                                <summary>{{ solves[id]|length }} solve(s)</summary>
+                                <table>
+                                    <thead>
+                                        <tr>
+                                            <th>Username</th>
+                                            <th>Time</th>
+                                        </tr>
+                                    </thead>
+                                    {% for solve in solves[id] %}
+                                        <tr {% if solve.user.username == current_user.username %}
+                                            class="highlight"
+                                            {% endif %}
+                                            >
+                                            <td>{{solve.user.username}}</td>
+                                            <td>{{solve.time | time_ago}}</td>
+                                        </tr>
+                                    {% endfor %}
+                                </table>
+                            </details>
+                        {% else %}
+                            <p class="solves-count">0 solves</p>
+                        {% endif %}
+                    </footer>
 
 
-            </article>
-        {% endfor %}
-    </section>
-</main>
-</body>
-</html>
+                </article>
+            {% endfor %}
+        </section>
+    </main>
+{% endblock %}
