--- a/templates/register.html
+++ b/templates/register.html
@@ -1,23 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Register | SaintCTF</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/nav.css') }}">
+{% extends "base.html" %}
+{% block title %}Register{% endblock %}
 
+{% block head %}
+    {{ super() }}
     <!-- Sweet alert -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@5/dark.css" />
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.js"></script>    <!-- as lazy as normal alerts, better than you could make them yourself -->
+{% endblock %}
 
-    <!-- Jquery 3.6.0 -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-
-</head>
-<body style="background-color: #121212;">
-    {%  include 'navbar.html' %}
-
-
+{% block body %}
     <section id="login-section">
         <h1>Sign Up</h1>
         <form id="signup-form" action="/register" method="POST">
@@ -72,5 +63,4 @@
         });
 
     </script>
-</body>
-</html>
+{% endblock %}
